--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"number-to-words": "^1.2.4",
 		"react": "^16.13.1",
 		"react-apexcharts": "^1.3.7",
+		"react-countup": "^4.3.3",
 		"react-dom": "^16.13.1",
 		"react-scripts": "3.4.1"
 	},
@@ -20,8 +21,8 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
-  },
-  "proxy": "https://aq-visualizer.herokuapp.com",
+	},
+	"proxy": "https://aq-visualizer.herokuapp.com",
 	"eslintConfig": {
 		"extends": "react-app"
 	},
