--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "aq-visualizer-web",
+	"homepage": "https://ThamalDilanka.github.io/aq-visualizer-web",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -20,7 +21,10 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"                          
+
 	},
 	"proxy": "https://aq-visualizer.herokuapp.com",
 	"eslintConfig": {
@@ -37,5 +41,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^2.2.0"
 	}
 }
